--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <script>
         // 【重要】把你刚才 Cloudflare Worker 的网址填在这里
-        const WORKER_URL = "morning-hall-4d7b.fengjiaooo123.workers.dev"; 
+        const WORKER_URL = "https://morning-hall-4d7b.fengjiaooo123.workers.dev/"; 
 
         async function processImage() {
             const fileInput = document.getElementById('fileInput');
