--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             padding: 2rem 1rem;
             display: flex;
             justify-content: center;
-            min-height: 100vh;
+            min-height: 75vh;
         }
 
         .container {
@@ -272,7 +272,7 @@
 
 <div class="container">
     <button id="pasteBtn" class="clipboard-btn" title="读取剪切板图片">
-        <span>粘贴截图</span>
+        📋<span>粘贴截图</span>
     </button>
     <h1>砍口垒-截图制空计算器</h1>
     <p class="subtitle" >艦隊コレクション-スクリーンショット制空計算機</p>
